--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.9
-	loader_version=0.14.9
+	yarn_mappings=1.19.2+build.28
+	loader_version=0.14.10
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = fabric-example-mod
 
 # Dependencies
-	fabric_version=0.60.0+1.19.2
-	player_anim=0.4.0-test0
+	fabric_version=0.67.1+1.19.2
+	player_anim=0.4.0
