--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
-	loader_version=0.14.10
+	minecraft_version=1.19.3
+	yarn_mappings=1.19.3+build.2
+	loader_version=0.14.11
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = fabric-example-mod
 
 # Dependencies
-	fabric_version=0.67.1+1.19.2
-	player_anim=0.4.0
+	fabric_version=0.68.1+1.19.3
+	player_anim=0.4.1+1.19.3
